fixed body style - overflow hidden and 0 margarine

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,10 @@ clear: both;
 /******************************************
 /* LAYOUT
 /*******************************************/
-
+body{
+  margin: 0;
+  overflow: hidden;
+}
 
 
 #main {
